[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"
default-run = "day7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "day1/src/main.rs"

[[bin]]
name = "day2"
path = "day2/src/main.rs"

[[bin]]
name = "day3"
path = "day3/src/main.rs"

[[bin]]
name = "day4"
path = "day4/src/main.rs"

[[bin]]
name = "day5"
path = "day5/src/main.rs"

[[bin]]
name = "day6"
path = "day6/src/main.rs"

[[bin]]
name = "day7"
path = "day7/src/main.rs"

[dependencies]
